--- a/montego's.css
+++ b/montego's.css
@@ -61,7 +61,7 @@ section {
     align-items: center;
     margin: auto;
     margin-bottom: 125px;
-    box-shadow: 0 0 20px #0009;
+    box-shadow: 0 0 12px #00000040;
     border-radius: 50px;
     padding: 75px;
     z-index: 0;
@@ -134,7 +134,37 @@ section {
 
 /* PRODUCTOS */
 
+.products__title {
+    position: relative;
+    top: 50px;
+}
 
+.first__row, .second__row, .last__row {
+    display: flex;
+    justify-content: center;
+    margin: 75px;
+}
+
+.food__container {
+    width: 350px;
+    margin: 45px;
+    padding: 25px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    transition: transform 4.0 ease, box-shadow 4.0 ease;
+}
+
+.products {
+    width: 250px;
+    height: 175px;
+    border-radius: 4px;
+}
+
+.food__container:hover {
+    transform: scale(1.06);
+    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.25);
+    
+}
 
 /* FOOTER */
 
